Implemented JWT authentication, registration & login logic, add DTOs and Liquibase migrations

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -66,6 +66,11 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.15</version>
+		</dependency>
+		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
 			<artifactId>jackson-module-kotlin</artifactId>
 		</dependency>
@@ -92,6 +97,13 @@
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-test-junit5</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<!-- Liquibase Dependency -->
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>4.21.0</version> <!-- Użyj najnowszej wersji Liquibase -->
 		</dependency>
 	</dependencies>
 
@@ -141,6 +153,20 @@
 						<version>${kotlin.version}</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+
+			<!-- Liquibase Plugin for Maven -->
+			<plugin>
+				<groupId>org.liquibase</groupId>
+				<artifactId>liquibase-maven-plugin</artifactId>
+				<version>4.21.0</version> <!-- Wersja Liquibase Plugin -->
+				<configuration>
+					<url>jdbc:mysql://localhost:3306/your_database</url>
+					<username>your_db_username</username>
+					<password>your_db_password</password>
+					<driver>com.mysql.cj.jdbc.Driver</driver>
+					<changeLogFile>src/main/resources/db/changelog/db.changelog-master.xml</changeLogFile> <!-- Plik changelog -->
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
