Added contact email for user inquiries and daily email notifications with filtered properties based on user-defined area and price

--- a/src/main/resources/db/changelog/changes/01-create-user-and-role-tables-with-inserts.yaml
+++ b/src/main/resources/db/changelog/changes/01-create-user-and-role-tables-with-inserts.yaml
@@ -163,3 +163,21 @@ databaseChangeLog:
               - column:
                   name: role_id
                   value: '2'
+
+  - changeSet:
+      id: 9
+      author: kalixone
+      changes:
+        - addColumn:
+            tableName: user
+            columns:
+              - column:
+                  name: area_threshold_for_notifications
+                  type: DOUBLE
+                  constraints:
+                    nullable: true
+              - column:
+                  name: price_threshold_for_notifications
+                  type: DECIMAL(19, 2)
+                  constraints:
+                    nullable: true
