--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,9 @@
 databaseChangeLog:
   - include:
-      file: db/changelog/changes/01-create-user-and-role-tables-with-inserts.yaml
+      file: db/changelog/changes/001_create_tables.yaml
+  - include:
+      file: db/changelog/changes/002_insert_roles.yaml
+  - include:
+      file: db/changelog/changes/003_insert_users.yaml
+  - include:
+      file: db/changelog/changes/004_insert_user_roles.yaml
