--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/properties
+spring.datasource.url=jdbc:mysql://localhost:3306/propertieskotlin
 spring.datasource.username=root
-spring.datasource.password=Piotr1998!
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 changeLogFile=/db/changelog/db.changelog-master.yaml
